--- a/Frank.Brewery.Wpf/Frank.Brewery.Wpf.csproj
+++ b/Frank.Brewery.Wpf/Frank.Brewery.Wpf.csproj
@@ -19,4 +19,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Frank.Brewery\Frank.Brewery.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
