--- a/Frank.Brewery/Frank.Brewery.csproj
+++ b/Frank.Brewery/Frank.Brewery.csproj
@@ -14,5 +14,6 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3-beta1" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.6.0-preview9.19421.4" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="3.0.8-preview8" />
   </ItemGroup>
 </Project>
