--- a/Frank.Brewery.Wpf/Frank.Brewery.Wpf.csproj
+++ b/Frank.Brewery.Wpf/Frank.Brewery.Wpf.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="JsonSubTypes" Version="1.6.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.0-preview9.19423.6">
       <PrivateAssets>all</PrivateAssets>
