--- a/Frank.Brewery/Frank.Brewery.csproj
+++ b/Frank.Brewery/Frank.Brewery.csproj
@@ -5,7 +5,9 @@
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="BeerMathLib" Version="0.5.0-alpha0002" />
+    <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="3.0.0-netcore3-00140" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0-preview9.19423.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="2.0.0-preview1-final" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.0-preview9.19423.6">
@@ -14,6 +16,5 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3-beta1" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.6.0-preview9.19421.4" />
-    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="3.0.8-preview8" />
   </ItemGroup>
 </Project>
