--- a/Frank.Brewery.Tests/Frank.Brewery.Tests.csproj
+++ b/Frank.Brewery.Tests/Frank.Brewery.Tests.csproj
@@ -4,10 +4,12 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <IsPackable>false</IsPackable>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.11.0" />
+    <PackageReference Include="BenchmarkDotNet.Annotations" Version="0.12.0" />
     <PackageReference Include="FluentAssertions" Version="5.9.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.3.1" />
     <PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="2.9.8">
